# ExamForgerScalerHackathon

./: .gitignore  AGENT_INSTRUCTIONS.md  ANTIGRAVITY_PROMPTS.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_agent.py  test_inference_logging.py  validate-submission.sh
server/: __init__.py  app.py  environment.py  requirements.txt
